2008-01-07  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add missing bindings for g_filename_*,
	  fixes bug 507447

2008-01-07  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add binding for memmove

2008-01-03  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix GMarkupParser, patch by Travis Watkins

2008-01-03  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libgnome-menu/: add metadata, patch by Travis Watkins

	* vapi/libgnome-menu.vapi: regenerated

2008-01-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala, ccode/valaccodemodifiers.vala:
	  support public static fields with initializers, fixes bug 506749

	* tests/classes-fields.exp, tests/classes-fields.vala: test public
	  static fields

2008-01-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratormethod.vala,
	  ccode/valaccodeformalparameter.vala: add limited support for defining
	  methods with variable argument list

2008-01-03  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: remove close method from FileStream class as it's
	  also the implicitly called free function, fixes bug 506817

2008-01-03  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: default to in parameters for structs
	  passed by reference, support is_ref attribute in metadata

	* vapi/packages/gdk-2.0/, vapi/packages/gtk+-2.0/,
	  vapi/packages/hildon-1/, vapi/packages/pango/, vapi/packages/vte/: fix
	  parameter directions, fixes bug 506426

	* vapi/atk.vapi, vapi/gdk-2.0.vapi, vapi/gio-2.0.vapi,
	  vapi/gtk+-2.0.vapi, vapi/gtksourceview-2.0.vapi, vapi/hildon-1.vapi,
	  vapi/libgnome-2.0.vapi, vapi/pango.vapi, vapi/poppler-glib.vapi,
	  vapi/vte.vapi: regenerated

2007-12-27  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support base_class attribute for
	  non-GObject classes

2007-12-27  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: fix symbol modifiers,