@@ -28,4 +28,16 @@ GstTypeFind.suggest hidden="1"
 gst_type_register_static_full hidden="1"
 GstURIHandler::new_uri has_emitter="1"
 gst_version_string transfer_ownership="1"
-
+gst_message_new_error throws="0"
+gst_message_new_info throws="0"
+gst_message_new_warning throws="0"
+gst_message_parse_error throws="0"
+gst_message_parse_error.gerror is_out="1"
+gst_message_parse_error.debug is_out="1"
+gst_message_parse_info throws="0"
+gst_message_parse_info.gerror is_out="1"
+gst_message_parse_info.debug is_out="1"
+gst_message_parse_warning throws="0"
+gst_message_parse_warning.gerror is_out="1"
+gst_message_parse_warning.debug is_out="1"
+gst_object_default_error throws="0"
